[gd_scene load_steps=3 format=3 uid="uid://cojvgu3wuyscn"]

[ext_resource type="Script" path="res://ui_scenes/pause_menu.gd" id="1_mxvus"]
[ext_resource type="Theme" uid="uid://cgprh2heefr62" path="res://assets/default_theme.tres" id="2_qsl4e"]

[node name="pause_menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mxvus")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.0
offset_top = -85.0
offset_right = 15.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qsl4e")
text = "Resume"

[node name="retry_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qsl4e")
text = "Retry"

[node name="quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qsl4e")
text = "Quit"

[connection signal="pressed" from="VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/retry_button" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
